# connection-down-detector

./: README.md  pyproject.toml  setup.py  simpler-connection-detecter.py  weather_display.py
src/connection_down_detector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/connection_monitor/: config.py  main.py  outage_logger.py  ping.py  stats.py  ui.py
tests/: test_latency_and_outages.py
