[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "connection-down-detector"
version = "0.1.0"
description = "Simple live connection monitor with ping, rich table UI, and outage grouping logs."
authors = [ { name = "Your Name" } ]
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "rich>=13.7.0",
    "pytest>=8.0.0"
]

[project.scripts]
connection-monitor = "connection_monitor.main:main"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
addopts = "-q"
